--- a/English Chapters/2_What_is_quantum_computing.ipynb
+++ b/English Chapters/2_What_is_quantum_computing.ipynb
@@ -13,13 +13,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1 More than flipping coins \n",
+    "### 2.1 What computers do\n",
     "\n",
-    "The example of coins being flipped can be helpful in explaining how quantum effects behave but it would be rather impractical to use coins as a method of quantum computation. There are a few obvious reasons for this: \n",
+    "Before we add quantum spice to our computers, it would be wise to first describe what it is that our classical computers do. \n",
+    "\n",
+    "Computers work by executing logical operations (think addition/subtraction/multiplication/...) that take the machine from a starting point to a finishing point. The starting point that is fed into the computer is congenitally known as the input and what the computer ends up with is usually referred to as the output. An *algorithm* is a set of instructions that allow the computer to take the input and generate an output. For example, an algorithm for doubling a number could take an input of 3, multiply it by 2 and return an output of 6. \n",
+    "\n",
+    "Going back to the coins here, this is a bit like laying them out in a row and then proceeding to shuffle and flip the coins according to a script that allows something to be done. For example, you could add 2 numbers expressed in binary by following a simple series of rules that allows for addition. This is not too dissimilar to using an abacus as a calculator. Since the advent of the digital computer in the 1940's, these operations have been carried out by increasingly advanced machines to do more complex computations a lot faster.\n",
+    "\n",
+    "### 2.2 More than flipping coins \n",
+    "\n",
+    "The example of coins being flipped can be helpful in explaining how quantum effects behave but it would be not be practical to use coins for quantum computation. There are a few obvious reasons for this: \n",
     "\n",
     "- Flipping coins is not very fast. Modern computers have clock speeds in the GHz or billions of complete clock cycles per second. We would need an astronomical number of coins to try and replicate that. \n",
     "\n",
-    "- Flipping coins can only really be used to generate random numbers. Beyond the conventional deterministic computing operations we can already do, the only real advantage from quantum theory would be the 'random' nature of the coin flips. \n",
+    "- Tossing coins can only really be used to generate random numbers. Beyond the conventional deterministic computing operations we can already do, the only real advantage from quantum theory would be the 'random' nature of the coin flips. \n",
     "\n",
     "- Sticking coins together is even slower than just flipping them. Not to mention the part where they get shuffled in a pseudorandom way. \n",
     "\n",
@@ -28,20 +36,13 @@
     "\n",
     "- Perform operations on qubits quickly \n",
     "- Have a precise control over the probabilities \n",
-    "- Be able to effectively control multiple qubits at once "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.2 What computers do\n",
+    "- Be able to effectively control multiple qubits at once \n",
     "\n",
-    "Before we add quantum spice to our computers, it would be wise to first describe what it is that our classical computers do. \n",
+    "### 2.3 Quantum Computers of today \n",
     "\n",
-    "Computers work by executing logical operations (think addition/subtraction/multiplication/...) that take the machine from a starting point to a finishing point. The starting point that is fed into the computer is congenitally known as the input and what the computer ends up with is usually referred to as the output. An *algorithm* is a set of instructions that allow the computer to take the input and generate an output. For example, an algorithm for doubling a number could take an input of 3, multiply it by 2 and return an output of 6. \n",
+    "> TODO: Include diagrams \n",
     "\n",
-    "Going back to the coins here, this is a bit like laying them out in a row and then proceeding to shuffle and flip the coins according to a script that allows something to be done. For example, you could add 2 numbers expressed in binary by following a simple series of rules that allows for addition. This is not too dissimilar to using an abacus as a calculator. Since the advent of the digital computer in the 1940's, these operations have been carried out by increasingly advanced machines to do more complex computations a lot faster."
+    "There are many ways to build a quantum computer. The heart of which is the quantum processing unit (QPU). "
    ]
   },
   {
@@ -62,7 +63,20 @@
     "\n",
     " > Quantum computers are __*not*__ faster versions of regular computers\n",
     "\n",
+    " > \n",
+    "\n",
     " > Quantum computers are __*not*__ used to run conventional algorithms, or do things that are already very well done on a classical computer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.4 Quantum Computers of today \n",
+    "\n",
+    "> TODO: Include diagrams \n",
+    "\n",
+    "There are many ways to build a quantum computer. The heart of which is the quantum processing unit (QPU). "
    ]
   },
   {
