--- a/English Chapters/5_Single_Qubits_&_Bloch_Sphere.ipynb
+++ b/English Chapters/5_Single_Qubits_&_Bloch_Sphere.ipynb
@@ -195,10 +195,10 @@
     "\n",
     "We also have rotations for the x & y axis too. In fact, the X,Y gates are special cases of $R_x(\\theta)$ & $R_y(\\theta)$ with $\\theta = \\pi$. \n",
     "\n",
-    "$R_z(\\phi)$ is also useful because it allows us to give any phase to a qubit. \n",
+    "$R_z(\\phi)$ (also known as P) is also useful because it allows us to give any phase to a qubit. \n",
     "\n",
     "$$\n",
-    "R_z(\\phi) = \\begin{bmatrix} e^{-i\\phi/2} & 0 \\\\ 0 & e^{i\\phi/2}\\cos(\\theta/2) \\end{bmatrix}\n",
+    "R_z(\\phi) = P(\\phi) = \\begin{bmatrix} 1 & 0 \\\\ 0 & e^{i\\phi} \\end{bmatrix}\n",
     "$$\n",
     "\n",
     "This gives a phase shift of $\\phi$ between $\\ket{0}$ & $\\ket{1}$\n",
@@ -210,6 +210,9 @@
     "> ### Exercise 5.5 \n",
     "> By using $\\theta = \\pi/2$ apply $R_y(\\pi/2)$ to the state $\\ket{1}$. What gate does $R_y(\\pi/2)$ do? \n",
     "\n",
+    ">>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> CHECK THIS\n",
+    "\n",
+    " \n",
     "> ### Exercise 5.6 \n",
     "> The X gate turns $\\ket{0}$ to $\\ket{1}$ and $\\ket{1}$ to $\\ket{0}$. By considering angles on the Bloch sphere, what is the angle $\\theta$ such that $R_y(\\theta) = X$\n",
     "\n",
