--- a/English Chapters/6_Multiple_Qubits.ipynb
+++ b/English Chapters/6_Multiple_Qubits.ipynb
@@ -98,12 +98,29 @@
     "\n",
     "$$ \\ket{5} = \\ket{101} = \\begin{bmatrix} 0 \\\\ 0\\\\ 0\\\\ 0\\\\ 0\\\\ 1\\\\0\\\\0 \\end{bmatrix} $$\n",
     "\n",
+    "For each qubit we add, the number of rows in this column vector doubles! This is what makes it difficult to simulate quantum algorithms on classical computers. \n",
+    "\n",
+    "> ### Exercise 6.3 \n",
+    "> \n",
+    "> For n qubits, we need a vector with $2^n$ rows to describe the state. What shape of matrix (rows, columns) do we need to describe the operator (i.e. multi-qubit gate) that acts on this vector? \n",
+    "\n",
+    "\n",
     "## 6.3 Multiple qubits, multiple gates \n",
     "\n",
     "\n",
-    "If we have multiple qubits, we can apply single qubit gates on each of them at a time. This is the same as having a bunch of single qubits on their own, each having their state changed by the qubit gate. \n",
+    "If we have multiple qubits, we can apply single qubit gates on each of them at a time. This is the same as having a bunch of single qubits on their own, each having their state changed by the qubit gate. The simplest case is two qubits. Let's begin with our qubits in the normal starting state of $\\ket{q_1q_0} = \\ket{00}$. We can apply a Hadamard gate on the first qubit, $q_0$ to change it to the superposition state $\\ket{+}$\n",
     "\n",
-    "The simplest case is two qubits.\n",
+    "$$ \\ket{00} \\rightarrow \\ket{0+} $$ \n",
+    "\n",
+    "Then we might want to apply the not (X) gate to the other qubit, $q_1$ to change it to $\\ket{1}$\n",
+    "\n",
+    "$$ \\ket{0+} \\rightarrow \\ket{1+} $$\n",
+    "\n",
+    "As these are two seperate operations, we could do them both at the same time in one step \n",
+    "\n",
+    "$$  \\ket{00} \\rightarrow \\ket{1+} $$\n",
+    "\n",
+    "> Applying single qubit gates to a collection of qubits, changes the states of the qubits the gates are applied to\n",
     "\n",
     "\n",
     "## 6.4 Product States \n",
@@ -123,21 +140,17 @@
     "\n",
     "## 6.5 Entangled States \n",
     "\n",
-    "If it is easy to simulate a collection of isolated qubits, why do we bother making quantum computers to simulate quantum states? \n",
+    "You might have noticed that it's really easy to apply single qubit gates to a collection of qubits. In the last chapter, we saw that all single qubit gates can be represented by $ 2 \\times 2$ matrices. And each qubit can be represented by a column vector with 2 rows. So if we had a large number of qubits, we could still simulate a large number of $2 \\times 2$ matrices on a classical computer. If it is easy to simulate a collection of isolated qubits, why do we bother making quantum computers? \n",
     "\n",
     "The answer comes from combining superposition with entanglement. \n",
     "\n",
     "\n",
-    "    >>>>>>>>>>>>>>>>>>>> \n",
-    "\n",
-    "TODO include circuit for Bell State preperation \n",
-    "\n",
-    "    >>>>>>>>>>>>>>>>>>>>>>\n",
-    "\n",
-    "\n",
     "### 6.5.1 If statements with spicy sauce \n",
     "\n",
-    "In general programming, if statements allow you to include logic in a program. If a statement is true, the algorithm will do one thing, otherwise, if the statement is false, it will do something else. The computer first has to check the variables value before executing the next step of the algorithm. Doing this on a quantum computer would require making a measurement which would collapse the superposition leaving with with a classical bit. \n",
+    "In general programming, if statements allow you to include logic in a program. If a statement is true, the algorithm will do one thing, otherwise, if the statement is false, it will do something else. The computer first has to check the variables value before executing the next step of the algorithm. We can do this on a quantum computer by measuring our qubits, collapsing the superposition and then performing our next quantum gates accordingly. \n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "<!-- For example, in section 4.3.1 there was a game where if a coin landed up we got +1 dollar, otherwise (if it were tails up) we got -1 dollars. This works as a clasical if statement provided we add the value after the coin is landed and observed. \n",
     "\n",
@@ -152,14 +165,27 @@
     "\n",
     "> Entanglement allows the superposition of one qubit to define the superpotion of another\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
     "### 6.5.2 Ring the Bell (states)\n",
     "\n",
     "\n",
+    "There are many ways we can entangle two qubits, and some qubits can be more entangled than others. The most common entangled states are known as the Bell states, and can be written like\n",
     "\n",
+    "$$ \\ket{\\Phi^+} = \\frac{1}{2} \\left( \\ket{00} + \\ket{11} \\right) $$\n",
+    "$$ \\ket{\\Phi^-} = \\frac{1}{2} \\left( \\ket{00} - \\ket{11} \\right) $$\n",
+    "$$ \\ket{\\Psi^+} = \\frac{1}{2} \\left( \\ket{01} + \\ket{10} \\right) $$\n",
+    "$$ \\ket{\\Psi^-} = \\frac{1}{2} \\left( \\ket{01} - \\ket{01} \\right) $$\n",
     "\n",
+    "For each of these states, we can't seperate out our two qubits as a product state. \n",
     "\n",
+    "<!-- \n",
+    "The following circuit generates the Bell states\n",
     "\n",
+    "![GenerateBellStates](Images\\Bell_State_circuit.png)\n",
     "\n",
+    " -->\n",
     "\n",
     "\n",
     "\n",
@@ -175,10 +201,15 @@
     "- We can use entanglement to apply logic gates\n",
     "\n",
     "\n",
-    "$^*$ There have been proposals for using a base other than 2 for quantum computing. This has some advanatges but the difficulty in contructing algorithms combined with the difficulties in engineering such a device have prevented any significant machine from being built.\n",
+    "$^*$ There have been proposals for using a base other than 2 for quantum computing. This has some advanatges but the difficulty in contructing algorithms combined with the difficulties in error correction such a device have prevented any significant machine from being built.\n",
     "\n",
     "[1] L.Vivah, [Learn How to Read Binary in 5 minutes](https://medium.com/@LindaVivah/learn-how-to-read-binary-in-5-minutes-dac1feb991e), 2018\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
