--- a/English Chapters/8_Quantum_algorithms.ipynb
+++ b/English Chapters/8_Quantum_algorithms.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "Across many of the proposed quantum algorithms, significant work has been done in reducing the requirements. This can be done by making circuits more efficient- using fewer gates and fewer qubits.  It is hoped that continued progress in circuit optimisation and improved hardware specifications will allow for better quantum algorithms to be implemented in the near-term. \n",
     "\n",
-    "### 8.5 Practical considerations \n",
+    "### 8.5 Quantum Strategy: Practical considerations \n",
     "\n",
     "- Try a small-scale proof of concept project first \n",
     "    - Small scale QC can be simulated on a classical computer. This can be a lot cheaper than buying access to an expensive QPU\n",
