--- a/English Chapters/1_What_is_quantum.ipynb
+++ b/English Chapters/1_What_is_quantum.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. What is Quantum?\n",
+    "# 1. What is Quantum?\n",
     "\n",
     "Before we can talk about quantum computing, we first have to understand the basic concepts of quantum that make it work. \n",
     "\n",
-    "### 1.1 Common misconceptions about quantum \n",
+    "## 1.1 Common misconceptions about quantum \n",
     " \n",
     "In science fiction *quantum* is often used to explain away a technology that seems to defy the laws of physics. In the 2018 superhero movie *Ant-Man*, the protagonist is able to become smaller and smaller until they enter the mysterious *Quantum Realm*, described as “a reality where all concepts of time and space become irrelevant”. \n",
     "\n",
@@ -17,7 +17,7 @@
     "Quantum mechanics is described by the Schrödinger equation that is built on space and time. There are some differences to classical physics, the physics everyone is used to experiencing in everyday life. Quantum it is not some magical concept which allows for anything that violates classical physics to be explained away. There are however, some small but significant features of quantum mechanics that allow for the development of new technologies. \n",
     "\n",
     "\n",
-    "### 1.2 How many physicists does it take to change a lightbulb?\n",
+    "## 1.2 How many physicists does it take to change a lightbulb?\n",
     "\n",
     "In the early 20th century, a German physicist (by the cool name of Max Planck) was tasked with modelling the emission of light from a filament bulb (basically a wire that gets hot enough to glow). He came up with what is known as the black body radiation spectrum. It turns out, from his model, the energy emitted by an object with a finite temperature is not emitted in a continuous spectrum. That's to say rather than all possible wavelengths of light being emitted by this bulb only certain wavelengths were allowed. This is known as a discrete spectrum. What this in turn means is that energy is emitted are chunks, or *quanta*, with a well-defined energy. We can't have energy between these chunks. It's a bit like taking the lift (elevator in American English). One can only get on or off the lift at specific heights corresponding to the floor level. Each floor is seperated by a distance and the lift can go up or down in any multiple of these distances limited by the number of floors. In between those levels the doors of the lift won't open.\n",
     "\n",
@@ -27,7 +27,7 @@
     "\n",
     "Beyond the quantisation of energy, there are quantum phenomena which are very much more significant to quantum computing: *superposition & entanglement*. \n",
     "\n",
-    "### 1.3 So what happened to Schrödinger’s cat?\n",
+    "## 1.3 So what happened to Schrödinger’s cat?\n",
     "\n",
     "You may have heard of a very special cat associated with another German physicist, Schrodinger. In this analogy, a cat is kept inside a black box that the observer can't view inside. Within the box, there is also a vial of poison with a radioactive source. The radioactive source has an equal probability of decaying or not decaying in some time. If the source decays, the poison is released and the cat dies. otherwise the cat is just fine. Until the observer opens the box they don't know if the cat is dead or alive. \n",
     "![cat](Images\\standard_cat.png)\n",
@@ -49,7 +49,7 @@
     "\n",
     "$*$ According to the many worlds interpretation of quantum mechanics it is not quite so simple...\n",
     "\n",
-    "### 1.4 Not so spooky action at a distance\n",
+    "## 1.4 Not so spooky action at a distance\n",
     "\n",
     "The more conceptually difficult phenomena quintessential to quantum computing can also be explained using coins (but with one small modification). For this example 2 coins will be required. \n",
     "\n",
@@ -64,7 +64,7 @@
     "\n",
     "But if only one of the coins is revealed, say the H coin, then it is instantly known that the other one must be a T. Suddenly guessing the state of the second coin has a 100% chance of success whereas with the separate coin tosses revealing one made no difference to guessing the other. These linked probabilities is what is known as an *entangled state*.\n",
     "\n",
-    "### 1.5 Quantum Technology \n",
+    "## 1.5 Quantum Technology \n",
     "\n",
     "Quantum Technologies, as they are defined by John Morton, director of UCLQ (as of the time of writing) are *\"ones which exploit quantum superposition and entanglement to achieve major advances over current technologies in areas including communication, sensing and information processing.\"*\n",
     "\n",
