Removed assignments Tareas #6

--- a/English Chapters/3.1_Complex_numbers.ipynb
+++ b/English Chapters/3.1_Complex_numbers.ipynb
@@ -52,13 +52,13 @@
     "\n",
     "Where $a$ and $b$ are purely real numbers. The real part of $z$ is known as $ Re(z) = a$ and similarly the imaginary component of is $ Im(z) = b$. \n",
     "\n",
-    "<!-- ### 3.2.3 The Argand Diagram\n",
+    "### 3.2.3 The Argand Diagram\n",
     "\n",
     "Complex numbers can be represented on a graph by splitting them into their real & imaginary parts. In the Argand diagram the x axis represents the real part and the y axis represents the imaginary part. \n",
     "\n",
     "![Argand_plane](Images\\A_plus_bi.svg)\n",
     "\n",
-    "If a were negative, the real part would be negative so the arrow would point to the left instead. If b were negative, the imaginary part would be negative, so the arrow would point downwards instead.  -->\n",
+    "If a were negative, the real part would be negative so the arrow would point to the left instead. If b were negative, the imaginary part would be negative, so the arrow would point downwards instead. \n",
     "\n",
     "\n",
     ">### Exercise 3.1\n",
@@ -84,12 +84,12 @@
     "\n",
     "$z^* = x - iy$ \n",
     "\n",
-    "<!-- In the figure below the complex number $z$ is shown along with its complex conjugate. In this diagram $\\bar{z}$ is used rather than $z^*$ but it means the same thing.  \n",
+    "In the figure below the complex number $z$ is shown along with its complex conjugate. In this diagram $\\bar{z}$ is used rather than $z^*$ but it means the same thing.  \n",
     "\n",
     "![Complex_conjugate](Images\\Complex_conjugate_picture.svg.png)\n",
     " [3]\n",
     "\n",
-    " Note how the real part is the same, but the imaginary part is on the negative axis.  -->\n",
+    " Note how the real part is the same, but the imaginary part is on the negative axis. \n",
     "\n",
     " ### 3.2.4 Magnitude of complex numbers \n",
     "\n",
@@ -135,11 +135,11 @@
     "\n",
     "In the context of quantum information this object $ e^{i\\theta}$ is called a phase and is of exceptional importance. To explain why $\\theta$ is so significant would require its own chapter. Instead it shall be incorporated into later chapters as needed.\n",
     "\n",
-    "<!-- \n",
+    "\n",
     "### 3.2.6 Polar form of complex numbers \n",
     "\n",
     "\n",
-    "We can represent any complex number on the Argand diagram in terms of its real and imaginary parts. From trigonometry, we can also represent any point on a circle using an angle and a given radius. \n",
+    "We can represent any complex number on the **Argand diagram** in terms of its real and imaginary parts. From trigonometry, we can also represent any point on a circle using an angle and a given radius. \n",
     "\n",
     "Euler's formula allows us to put these two together, representing any complex number as a point on a circle. \n",
     "\n",
@@ -161,7 +161,7 @@
     "$$z = x + iy = re^{i\\theta}$$ \n",
     "\n",
     "\n",
-    "Where $r$ is the magnitude of the complex number $r = |z| = \\sqrt{x^2 + y^2}$ and $\\theta$ is the angle made between the real and the imaginary plane  -->"
+    "Where $r$ is the magnitude of the complex number $r = |z| = \\sqrt{x^2 + y^2}$ and $\\theta$ is the angle made between the real and the imaginary plane "
    ]
   },
   {
