--- a/English Chapters/3.2_Linear_algebra.ipynb
+++ b/English Chapters/3.2_Linear_algebra.ipynb
@@ -230,9 +230,11 @@
     "\n",
     "For all quantum gates, an important property they have is that they are unitary. Unitary matrices have an inverse equal to their conjugate transpose (the dagger at the top).\n",
     "\n",
+    "$$ U^\\dagger = U^{-1} $$\n",
+    "\n",
     "This means \n",
     "\n",
-    "$$ U^\\dagger U = I $$\n",
+    "$$ U^\\dagger U = U^{-1}U = I $$\n",
     "\n",
     "The conjugate transpose is the same process as it is to turn a ket (column vector) into a bra (row vector). Take You swap the rows and the columns and then replace every imaginary number with the negative version. \n",
     "\n",
