--- a/English Chapters/6_Multiple_Qubits.ipynb
+++ b/English Chapters/6_Multiple_Qubits.ipynb
@@ -127,7 +127,7 @@
     "\n",
     "So far we have acted on all our qubits seperately, what happens to one doesn't affect the others. If we were to measure one of the qubits, it wouldn't tell us anything about the other qubits. \n",
     "\n",
-    "Such states where we can seperate the qubits out are called product states. \n",
+    "Such states where we can seperate the qubits out are called product states (or pure states). \n",
     "\n",
     "In general a product state can be written as \n",
     "\n",
@@ -147,28 +147,27 @@
     "\n",
     "### 6.5.1 If statements with spicy sauce \n",
     "\n",
-    "In general programming, if statements allow you to include logic in a program. If a statement is true, the algorithm will do one thing, otherwise, if the statement is false, it will do something else. The computer first has to check the variables value before executing the next step of the algorithm. We can do this on a quantum computer by measuring our qubits, collapsing the superposition and then performing our next quantum gates accordingly. \n",
+    "In general programming, if statements allow you to include logic in a program. If a statement is true, the algorithm will do one thing, otherwise, if the statement is false, it will do something else. The computer first has to check the variables value before executing the next step of the algorithm. We can do this on a quantum computer by measuring our qubits, collapsing the superposition and then performing our next quantum gates accordingly. For example, [in quantum teleportation this is done](https://qiskit.org/textbook/ch-algorithms/teleportation.html). \n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "<!-- For example, in section 4.3.1 there was a game where if a coin landed up we got +1 dollar, otherwise (if it were tails up) we got -1 dollars. This works as a clasical if statement provided we add the value after the coin is landed and observed. \n",
+    " For example, in section 4.3.1 there was a game where if a coin landed up we got +1 dollar, otherwise (if it were tails up) we got -1 dollars. This works as a clasical if statement provided we add the value after the coin is landed and observed. \n",
     "\n",
     "What makes quantum operators different is that we can apply them to the superposition. What this means is we can act on both the $\\ket{H}$ and $\\ket{T}$ amplitudes at once. \n",
     "\n",
-    "> Superposition is not parallel computing! -->\n",
-    "\n",
-    "In quantum computing, we want to use the quantum state so we try to avoid making measurements until the end. \n",
-    "\n",
-    "<!-- `We can still do classical if statements (this is a part of quantum teleportation (not covered in this course))` -->\n",
     "\n",
     "\n",
     "> Entanglement allows the superposition of one qubit to define the superpotion of another\n",
     "\n",
     "\n",
     "\n",
+    "### 6.5.2 Can the qubit not? \n",
     "\n",
-    "### 6.5.2 Ring the Bell (states)\n",
+    "Entanglement can be created by gates that act on multiple qubits. This creates an entangled state\n",
+    "\n",
+    "\n",
+    "### 6.5.3 Ring the Bell (states)\n",
     "\n",
     "\n",
     "There are many ways we can entangle two qubits, and some qubits can be more entangled than others. The most common entangled states are known as the Bell states, and can be written like\n",
