#7 Added Q Country to reccomended reading

--- a/English Chapters/3.2_Linear_algebra.ipynb
+++ b/English Chapters/3.2_Linear_algebra.ipynb
@@ -144,6 +144,22 @@
     ">\n",
     ">iii. Bonus question: Compare i. ii. . Is the result the same as from Exercise 3.2 iv? \n",
     ">If not, what has changed?\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The Tensor Product \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "\n",
     "### 3.3.1 Matrices\n",
     "\n",
