--- a/Assignments/Assignment_4.ipynb
+++ b/Assignments/Assignment_4.ipynb
@@ -168,18 +168,12 @@
    "source": [
     "## Question 3: SWAP in terms of CNOT\n",
     "\n",
-    "In the challenge question for assignment 3, we showed that it's impossible to clone a quantum state. But we can swap the quantum states of two qubits. \n",
-    "\n",
-    "This effectively does:\n",
-    "SWAP\n",
-    "\n",
-    "To do this gate, we can decompose it into three CNOTs\n",
+    "In the challenge question for assignment 3, we showed that it's impossible to clone a quantum state. But we can swap the quantum states of two qubits. But we can exchange the quantum states of two qubits. The gate that does this is called the SWAP gate. To do this gate, we can decompose it into three CNOTs\n",
     "\n",
     "$SWAP_{a,b} = CNOT_{a,b}CNOT_{b,a}CNOT_{a,b}$\n",
     "\n",
-    "\n",
     "1. Implement the circuit that does this (under the name `swap_qc_cnot `)\n",
-    "2. If we implement a Swap followed by your swap, what do you expect to get. \n"
+    "2. If we implement a normal swap followed by your swap, what do you expect to get as the final state?\n"
    ]
   },
   {
@@ -301,27 +295,21 @@
     "\n",
     "This version was proposed by [Ekert & Joza in 1998](https://arxiv.org/abs/quant-ph/9803072).\n",
     "\n",
-    "This circuit looks like this \n",
+    "This circuit looks like this: \n",
     "![qft](Images/qft.png)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\n",
+    "Here the gates are drawn in circles, but it is exactly the same thing as the circuit with squares.  \n",
     "Starting from the top, we put a Hadamard on the top qubit, followed by a series of controlled rotation gates up to $R_n$. Each of these controlled rotation gates has all the qubits below as controls for rotations. So if $\\ket{x_{n-1}} = \\ket{1}$ it would perform $R_2$ on qubit 0. Each rotation gate has this form: \n",
     "\n",
     "$$\n",
     "R_m = R_z(\\theta_m) = \\begin{bmatrix} 1 & 0 \\\\ 0 & e^{i2\\pi/M} \\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "Where the corresponding rotation angle is $\\theta_m = 2\\pi/M$ \n",
-    "For instance, the QFT of two qubits has this form: \n",
+    "Where $M = 2^m$ and the corresponding rotation angle is $\\theta_m = 2\\pi/M$ \n",
     "\n",
     "You can check out [a nice demo on Wolfram](https://demonstrations.wolfram.com/QuantumFourierTransformCircuit/)\n",
     "\n",
-    "Your task is to generate the circuit for the QFT for a two qubits\n",
+    "Your task is to generate the circuit for the QFT for two qubits\n",
     "\n",
     "### Bonus conceptual questions\n",
     "- What do you expect the final state from  $ QFT\\ket{0}$?\n",
