--- a/Assignments/Assignment_4.ipynb
+++ b/Assignments/Assignment_4.ipynb
@@ -74,7 +74,9 @@
     "\n",
     "For the first part of this, we will generate the quantum circuit that generates random numbers between 0 - 15. \n",
     "\n",
-    "First you will need to generate the superposition state $\\ket{++++}$ and then measure all the qubits."
+    "First you will need to generate the superposition state $\\ket{++++}$ and then measure all the qubits.\n",
+    "\n",
+    "> **Major hint: You may wish to check out the bonus chapter**"
    ]
   },
   {
