I give another hint for the QFT

--- a/Assignments/Assignment_4.ipynb
+++ b/Assignments/Assignment_4.ipynb
@@ -311,7 +311,31 @@
     "\n",
     "You can check out [a nice demo on Wolfram](https://demonstrations.wolfram.com/QuantumFourierTransformCircuit/)\n",
     "\n",
+    "\n",
+    "\n",
+    "For two qubits this can be simplified into the following steps:\n",
+    "\n",
+    "\n",
+    "- Hadamard on qubit 0 \n",
+    "- Controlled $Rz$ with angle $\\theta = \\pi/2$ with qubit 1 as control, qubit 0 as target \n",
+    "- Hadamard on qubit 1 \n",
+    "- (You don't need to do this) SWAP qubits 0 & 1 \n",
+    "\n",
+    "If you bravely attempted challenge question 2 from [Assignment 3](https://github.com/EquinoxAI/YAItQC/blob/main/Assignments/Assignment_3.pdf), you may have seen this written as: \n",
+    "\n",
+    "\n",
+    "$$\n",
+    "{F} = SWAP(H_1 \\otimes {1}_0)CRz_{1,0}(\\theta)({1} \\otimes H_0)\n",
+    "$$\n",
+    "\n",
+    "Remember in linear algebra, matrices act from the left to the right so the ($H_0$) acts first.\n",
+    "\n",
     "Your task is to generate the circuit for the QFT for two qubits\n",
+    "\n",
+    "> Hint: the controlled $Rz$ can be done using\n",
+    "> ` F2.cp(theta,j,i) `\n",
+    ">\n",
+    ">With `theta` being the rotation angle, `j` being the index of the control qubit & `i` being the index of the target qubit.\n",
     "\n",
     "### Bonus conceptual questions\n",
     "- What do you expect the final state from  $ QFT\\ket{0}$?\n",
