--- a/Assignments/Assignment_4.ipynb
+++ b/Assignments/Assignment_4.ipynb
@@ -337,9 +337,12 @@
     ">\n",
     ">With `theta` being the rotation angle, `j` being the index of the control qubit & `i` being the index of the target qubit.\n",
     "\n",
-    "### Bonus conceptual questions\n",
-    "- What do you expect the final state from  $ QFT\\ket{0}$?\n",
-    "- What does the Quantum Fourier Transform of 1 qubit look like?"
+    "### Bonus conceptual questions (optional)\n",
+    "\n",
+    "I include these to hint at the mathematical beauty hidden in the action of $F$\n",
+    "- What do you expect the final state from  $ F\\ket{0}$?\n",
+    "- What does the Quantum Fourier Transform of 1 qubit look like? (You are very familiar with this one qubit gate)\n",
+    "- If you plot out what $F$ does to some number states on the Argand plane, do you notice anything? Can you spot the relationship between the Fourier states and the roots of unity? "
    ]
   },
   {
